objects/CSE_ExternalReferences__c.object
<CustomObject>
    <description>ACC - External references Object created to allow the agent to keep in the case a track of the documents he has used to solve a case.</description>
    <fields>
        <fullName>BackOfficeLink__c</fullName>
        <formula>IF (TECH_BackOffice__c!=null, HYPERLINK($Label.CLMAY13ITBRR12+$Label.CLMAY13ITBRR13+TECH_BackOffice__c+$Label.CLMAY13ITBRR14, &apos;[Link to Service Request in Intouch]&apos; ,&apos;_blank&apos; ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Office Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOfficeSystem__c</fullName>
        <description>Back Office used in the country</description>
        <inlineHelpText>Back Office used in the country</inlineHelpText>
        <label>Back Office System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CountryOfBackOfficeSystem__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>ACC - Displays Related Case Number.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ExternalReferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClientReference__c</fullName>
        <description>ACC – Saving Client Reference from the Case.</description>
        <label>Client Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryOfBackOfficeSystem__c</fullName>
        <description>Country in which the Back Office is located</description>
        <inlineHelpText>Country in which the Back Office is located</inlineHelpText>
        <label>Country Of Back Office System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>ACC – Saving Description.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDinBackOfficeSystem__c</fullName>
        <label>ID in Back Office System</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>if( 
ISPICKVAL(Type__c, &apos;Order&apos;), 
HYPERLINK(&apos;/apex/VFP57_ExtRefOrderConnector?id=&apos; + Id , &apos; [View Order]&apos; ,&apos;_top&apos; ) 
, 
IF( 
TECH_BackOfficeLink2__c!=null, HYPERLINK($Label.CLMAY13ITBRR12+$Label.CLMAY13ITBRR10+TECH_BackOfficeLink2__c+$Label.CLMAY13ITBRR11, &apos;[Link to RMA in Intouch]&apos; ,&apos;_blank&apos; ) 
, 
if (ISPICKVAL(Type__c, &apos;Web&apos;), 
HYPERLINK(&apos;https://xsl.schneider-electric.com/config/index.pl?Action=ListFiles&amp;CWD=&apos; + ClientReference__c, &apos; [View Document]&apos; ,&apos;_top&apos; ) 
, 
&apos; &apos;)))</formula>
        <label>Reference Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherType__c</fullName>
        <description>ACC - Other Type Field for External reference</description>
        <label>Other Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAStatus__c</fullName>
        <label>PA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Under review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PATarget_Version__c</fullName>
        <label>PA Target Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynchronizationMessage__c</fullName>
        <description>Synchronization message coming from Back Office</description>
        <label>Synchronization Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemReference__c</fullName>
        <description>ACC – Saving System Reference.</description>
        <label>System Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technical field used for External Reference linked to an order using another account than the one related to the case.</description>
        <label>TECH_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External References</relationshipLabel>
        <relationshipName>External_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_BackOfficeLink2__c</fullName>
        <label>TECH Back Office Link2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_BackOffice__c</fullName>
        <description>Stores the back office related to an external reference</description>
        <label>TECH_BackOffice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_LegacyLastUpdateDate__c</fullName>
        <description>Last Synchronization Date with the Back Office</description>
        <label>TECH_LegacyLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>ACC – Select Reference Type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>P&amp;A</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>ClientReference__c</columns>
        <columns>Description__c</columns>
        <columns>OtherType__c</columns>
        <columns>Link__c</columns>
        <columns>SystemReference__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All4</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>ClientReference__c</columns>
        <columns>Description__c</columns>
        <columns>OtherType__c</columns>
        <columns>Link__c</columns>
        <columns>SystemReference__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>_Test</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Extrenal_reference_Industry_HMI</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>OtherType__c</columns>
        <columns>ClientReference__c</columns>
        <columns>SystemReference__c</columns>
        <columns>Description__c</columns>
        <columns>Link__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jamel Ouali</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>PCR</value>
        </filters>
        <label>PCR Industry HMI Jamel</label>
        <language>en_US</language>
        <sharedTo>
            <group>CCC_L3_IND_HMI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITBFailedtoSyncReturns</fullName>
        <booleanFilter>(1 or 4) and 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>SynchronizationMessage__c</columns>
        <columns>ClientReference__c</columns>
        <columns>SystemReference__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>BackOfficeSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SynchronizationMessage__c</field>
            <operation>contains</operation>
            <value>Failure,error</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Return</value>
        </filters>
        <filters>
            <field>BackOfficeSystem__c</field>
            <operation>equals</operation>
            <value>ITB - InTouch</value>
        </filters>
        <filters>
            <field>SystemReference__c</field>
            <operation>equals</operation>
        </filters>
        <label>ITB - Failed to Sync Returns</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Laurie_Failed_to_Sync_Returns</fullName>
        <booleanFilter>(1 or 4) and 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>SynchronizationMessage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>BackOfficeSystem__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SynchronizationMessage__c</field>
            <operation>contains</operation>
            <value>Failure,error</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Return</value>
        </filters>
        <filters>
            <field>BackOfficeSystem__c</field>
            <operation>equals</operation>
            <value>ITB - InTouch</value>
        </filters>
        <filters>
            <field>SystemReference__c</field>
            <operation>equals</operation>
        </filters>
        <label>Laurie - Failed to Sync Returns</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ERF-{0000}</displayFormat>
        <label>External References Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>